--- a/render.yaml
+++ b/render.yaml
@@ -10,3 +10,13 @@ services:
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: neotech.settings.production
+      - key: DB_NAME
+        value: neotech_db_z4gz
+      - key: DB_USER
+        value: neotech_db_z4gz_user
+      - key: DB_PASSWORD
+        value: gJnFwgDNJzdMLaP6k2rZWhGqnihrbmQj
+      - key: DB_HOST
+        value: dpg-d4u1ql75r7bs73fmid80-a.oregon-postgres.render.com
+      - key: DB_PORT
+        value: 5432
