--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     buildCommands: |
       pip install -r requirements.txt && 
-      python manage.py migrate && 
+      python manage.py migrate --noinput && 
       python manage.py collectstatic --noinput
     startCommand: "gunicorn neotech.wsgi:application"
     envVars:
